[gd_scene format=3 uid="uid://duw8opmobcx38"]

[ext_resource type="Texture2D" uid="uid://bdlg046q18js6" path="res://icon.svg" id="1_a74w0"]
[ext_resource type="Script" uid="uid://ciufr4y7rivm5" path="res://assets/scripts/ui/unit_equip_row.gd" id="1_vo7ne"]
[ext_resource type="PackedScene" uid="uid://dlcovo82xpf8s" path="res://assets/scenes/ui/slot_button.tscn" id="2_vm56u"]

[node name="unit_equip_row" type="PanelContainer" unique_id=1887723564 node_paths=PackedStringArray("portrait_rect", "name_label", "slots_container")]
offset_right = 52.0
offset_bottom = 72.0
size_flags_horizontal = 3
script = ExtResource("1_vo7ne")
portrait_rect = NodePath("HBoxContainer/portrait_rect")
name_label = NodePath("HBoxContainer/VBoxContainer/name_label")
slots_container = NodePath("HBoxContainer/VBoxContainer/slots_container")
slot_button_scene = ExtResource("2_vm56u")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=59834256]
layout_mode = 2

[node name="portrait_rect" type="TextureRect" parent="HBoxContainer" unique_id=1350783672]
layout_mode = 2
texture = ExtResource("1_a74w0")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" unique_id=1882461003]
layout_mode = 2
size_flags_horizontal = 3

[node name="name_label" type="RichTextLabel" parent="HBoxContainer/VBoxContainer" unique_id=81300232]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="slots_container" type="VBoxContainer" parent="HBoxContainer/VBoxContainer" unique_id=1878386060]
layout_mode = 2
